// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SkillContextProvider > should directly inject content for activated skills 1`] = `
"<task_guides>
Use \`lh task\` to manage tasks.
</task_guides>

<available_skills>
  <skill name="Artifacts" identifier="artifacts">Generate interactive UI components</skill>
</available_skills>

Use the activateSkill tool with the exact skill name to load its instructions."
`;

exports[`SkillContextProvider > should handle all skills activated (no available_skills list) 1`] = `"Task skill content here"`;

exports[`SkillContextProvider > should inject skill metadata when skills are provided 1`] = `
"<available_skills>
  <skill name="Artifacts" identifier="artifacts" location="/path/to/skills/artifacts/SKILL.md">Generate interactive UI components</skill>
  <skill name="My Skill" identifier="my-skill">Custom skill description</skill>
</available_skills>

Use the activateSkill tool with the exact skill name to load its instructions."
`;

exports[`SkillContextProvider > should merge with existing system message 1`] = `
"You are a helpful assistant.

<available_skills>
  <skill name="Artifacts" identifier="artifacts" location="/path/to/skills/artifacts/SKILL.md">Generate interactive UI components</skill>
  <skill name="My Skill" identifier="my-skill">Custom skill description</skill>
</available_skills>

Use the activateSkill tool with the exact skill name to load its instructions."
`;

exports[`SkillContextProvider > should only inject lightweight metadata without content field 1`] = `
"<available_skills>
  <skill name="Artifacts" identifier="artifacts" location="/path/to/skills/artifacts/SKILL.md">Generate interactive UI components</skill>
</available_skills>

Use the activateSkill tool with the exact skill name to load its instructions."
`;

exports[`SkillContextProvider > should render XML with location attribute 1`] = `
"<available_skills>
  <skill name="PDF Processing" identifier="pdf-processing" location="/path/to/skills/pdf-processing/SKILL.md">Extracts text from PDF files</skill>
  <skill name="Data Analysis" identifier="data-analysis" location="/path/to/skills/data-analysis/SKILL.md">Analyzes datasets and generates charts</skill>
</available_skills>

Use the activateSkill tool with the exact skill name to load its instructions."
`;

exports[`SkillContextProvider > should render XML without location when not provided 1`] = `
"<available_skills>
  <skill name="My Skill" identifier="my-skill">Custom skill description</skill>
</available_skills>

Use the activateSkill tool with the exact skill name to load its instructions."
`;
